--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
                 { name: 'DTD PLAYER', role: '대회 운영사', details: '토너먼트의 실질적인 운영 및 진행 담당.' },
                 { name: 'Pokercaster', role: '외주 프로덕션', details: '무대 설치, 메인 테이블 조명, 케이블, 오디오, 네트워크 담당' },
                 { name: 'Merit Hotel', role: '베뉴 파트너', details: '무대 베뉴 제공 및 배너 설치 협업' },
+                { name: 'NSUS', role: '기술 지원', details: 'WSOP+ 앱 지원' },
                 { name: 'WSOP Social TF', role: '협력 TF', details: 'WSOP 소속. 담당자(로라, 커크)가 소셜 미디어 콘텐츠 제작' }
             ]
         };
